--- a/Project 2/Makefile
+++ b/Project 2/Makefile
@@ -11,7 +11,7 @@ hash.o: hash.cpp hash.h
 	g++ -c hash.cpp
 
 debug:
-	g++ -g -o useHeapDebug.exe useHeap.cpp heap.cpp hash.cpp
+	g++ -g -o useHeap.out useHeap.cpp hash.cpp heap.cpp
 
 clean:
 	rm -f *.exe *.o *.stackdump *~
