--- a/Project 2/.vscode/settings.json
+++ b/Project 2/.vscode/settings.json
@@ -5,6 +5,10 @@
         "type_traits": "cpp",
         "vector": "cpp",
         "xstring": "cpp",
-        "xutility": "cpp"
+        "xutility": "cpp",
+        "ostream": "cpp",
+        "iostream": "cpp",
+        "list": "cpp",
+        "xmemory": "cpp"
     }
 }
